--- a/index.html
+++ b/index.html
@@ -9,21 +9,22 @@
 <link rel="stylesheet" type="text/css" href="css/header.css">
 <body>
     <div class="back_img aice jcce">
-        <div class="introduce">
-            <div class="introduce_title">
-                <span>- 옥진욱 -</span><br>
-                <span>웹 개발자 포트폴리오</span><br>
-            </div>
-            <div class="introduce_sen">
-                <span>안녕하세요</span><br>
-                <span>OOO 개발자입니다</span><br>
-                <span>습득능력이 빠르고, 도전적인 자세를 가진 옥진욱입니다</span>
-            </div>
+        <img src="https://i.imgur.com/TTfGsFa.jpg" width="100%" height="600">
+    </div>
+    <div class="introduce">
+        <div class="introduce_title">
+            <span>- 옥진욱 -</span><br>
+            <span>웹 개발자 포트폴리오</span><br>
+        </div>
+        <div class="introduce_sen">
+            <span>안녕하세요</span><br>
+            <span>OOO 개발자입니다</span><br>
+            <span>습득능력이 빠르고, 도전적인 자세를 가진 옥진욱입니다</span>
         </div>
     </div>
     <header class="jcce">
         <div class="header_component jcsb">
-            <div class="header_logo aice"><span>포트폴리오</span></div>
+            <div class="header_logo aice"><span>OK Portfolio</span></div>
             <div class="header_nav">
                 <ul class="aice" style="display: flex; height: 100%;">
                     <li>Introduce</li>
@@ -42,21 +43,21 @@
             <div class="title"><span>About Me</span></div>
             <div class="jcce">
                 <div class="aboutMe_box df">
-                    <div class="aboutMe_icon"><img src="https://cdn-icons.flaticon.com/png/512/3106/premium/3106921.png?token=exp=1654011455~hmac=67d5993126f2c05f4005aeaf734d1fac" width="40px"></div>
+                    <div class="aboutMe_icon"><img src="img/profile.png" width="40px"></div>
                     <div class="aboutMe_info">
                         <div class="aboutMe_kind">이름</div>
                         <div class="aboutMe_result">옥진욱</div>
                     </div>
                 </div>
                 <div class="aboutMe_box df">
-                    <div class="aboutMe_icon"><img src="https://cdn-icons.flaticon.com/png/512/2195/premium/2195322.png?token=exp=1654011539~hmac=2406077e97bc3d8d535c8d8e90cda569" width="40px"></div>
+                    <div class="aboutMe_icon"><img src="img/birth.png" width="40px"></div>
                     <div class="aboutMe_info">
                         <div class="aboutMe_kind">생년월일</div>
                         <div class="aboutMe_result">01.08.15</div>
                     </div>
                 </div>
                 <div class="aboutMe_box df">
-                    <div class="aboutMe_icon"><img src="https://as2.ftcdn.net/v2/jpg/02/54/62/25/1000_F_254622588_6OClHyYpak64rVI8y9QVjUvDlStsDEu9.jpg" width="40px"></div>
+                    <div class="aboutMe_icon"><img src="img/address.png" width="40px"></div>
                     <div class="aboutMe_info">
                         <div class="aboutMe_kind">주소지</div>
                         <div class="aboutMe_result">경상남도 김해시</div>
@@ -65,21 +66,21 @@
             </div>
             <div class="jcce">
                 <div class="aboutMe_box df">
-                    <div class="aboutMe_icon"><img src="https://cdn-icons.flaticon.com/png/512/4544/premium/4544288.png?token=exp=1654011650~hmac=5a64f2bf961dce3f4b336159cf21bcce" width="40px"></div>
+                    <div class="aboutMe_icon"><img src="img/call.png" width="40px"></div>
                     <div class="aboutMe_info">
                         <div class="aboutMe_kind">연락처</div>
                         <div class="aboutMe_result">010-7554-3933</div>
                     </div>
                 </div>
                 <div class="aboutMe_box df">
-                    <div class="aboutMe_icon"><img src="https://cdn-icons-png.flaticon.com/512/39/39547.png" width="40px"></div>
+                    <div class="aboutMe_icon"><img src="img/email.png" width="40px"></div>
                     <div class="aboutMe_info">
                         <div class="aboutMe_kind">이메일</div>
                         <div class="aboutMe_result">cdfor815@naver.com</div>
                     </div>
                 </div>
                 <div class="aboutMe_box df">
-                    <div class="aboutMe_icon"><img src="https://cdn-icons-png.flaticon.com/512/56/56871.png" width="40px"></div>
+                    <div class="aboutMe_icon"><img src="img/pen.png" width="40px"></div>
                     <div class="aboutMe_info">
                         <div class="aboutMe_kind">학력</div>
                         <div class="aboutMe_result">
@@ -129,8 +130,72 @@
         </div>
         <div class="project">
             <div class="title"><span>Project</span></div>
-            <div class="project_box"></div>
-            <div class="project_box"></div>
+            <div class="project_box">
+                <div class="project_title jcce">포트폴리오 웹 사이트</div>
+                <div class="project_year jcce">2022.01 ~ 2022.02 (4인 팀 프로젝트)</div>
+                <div class="project_content jcsb">
+                    <div class="img_box">
+                        <img src="img/email.png" width="100px">
+                        <div class="count">1/1</div>
+                    </div>
+                    <div class="ex_box">
+                        <div class="sen">
+                            내가 생각하는 나의 성격과 친구가 생각하는 나의 성격을 비교함으로써 겉으로 보이는 나의 모습이 어떠한지 파악해볼 수 있는 웹사이트입니다. 실제로 지인과 성격 검사를 서로 해주면서 얻은 아이디어를 바탕으로 직접 개발하였습니다.
+                            백 엔드 개발자와 협업하는 과정에 관해 많이 배울 수 있었습니다. 필요한 명세를 문서로 작성하여 소통하였고, 필요한 지식도 함께 공유하며 학습할 수 있었습니다.
+                            UI & UX를
+                        </div>
+                        <div class="option df">
+                            <div>
+                                <div>주요기능</div>
+                                <div>Frontend</div>
+                                <div>Backend</div>
+                                <div>DataBase</div>
+                                <div>develop</div>
+                            </div>
+                            <div>
+                                <div>주요기능</div>
+                                <div>Frontend</div>
+                                <div>Backend</div>
+                                <div>DataBase</div>
+                                <div>develop</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="project_box">
+                <div class="project_title jcce">포트폴리오 웹 사이트</div>
+                <div class="project_year jcce">2022.01 ~ 2022.02 (4인 팀 프로젝트)</div>
+                <div class="project_content jcsb">
+                    <div class="img_box">
+                        <img src="img/email.png" width="100px">
+                        <div class="count">1/1</div>
+                    </div>
+                    <div class="ex_box">
+                        <div class="sen">
+                            내가 생각하는 나의 성격과 친구가 생각하는 나의 성격을 비교함으로써 겉으로 보이는 나의 모습이 어떠한지 파악해볼 수 있는 웹사이트입니다. 실제로 지인과 성격 검사를 서로 해주면서 얻은 아이디어를 바탕으로 직접 개발하였습니다.
+                            백 엔드 개발자와 협업하는 과정에 관해 많이 배울 수 있었습니다. 필요한 명세를 문서로 작성하여 소통하였고, 필요한 지식도 함께 공유하며 학습할 수 있었습니다.
+                            UI & UX를
+                        </div>
+                        <div class="option df">
+                            <div>
+                                <div>주요기능</div>
+                                <div>Frontend</div>
+                                <div>Backend</div>
+                                <div>DataBase</div>
+                                <div>develop</div>
+                            </div>
+                            <div>
+                                <div>주요기능</div>
+                                <div>Frontend</div>
+                                <div>Backend</div>
+                                <div>DataBase</div>
+                                <div>develop</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
