--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="introduce_sen">
             <span>안녕하세요</span><br>
             <span>OOO 개발자입니다</span><br>
-            <span>습득능력이 빠르고, 도전적인 자세를 가진 옥진욱입니다</span>
+            <span>습득능력이 빠르고, 도전적인 자세를 가진 옥진욱입니다https://okkoding.github.io/Portfolio/</span>
         </div>
     </div>
     <header class="jcce">
